[package]
name = "cw-eth2-lc"
version = "0.1.0"
authors = ["Shravan Shetty <shravanshetty322@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
e2e = []
mainnet = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

# rainbow deps
types =  { path = "../types" }
utility =  { path = "../utility" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "b624c3f0d3c5bc9ea46faa14c9cb2d90ee1e1dec" }
merkle_proof = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "b624c3f0d3c5bc9ea46faa14c9cb2d90ee1e1dec" }
bls = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "b624c3f0d3c5bc9ea46faa14c9cb2d90ee1e1dec", default-features = false, features = ["milagro"]}
bitvec = "1.0.0"
rlp = "0.4.2"

[dev-dependencies]
cw-multi-test = "0.16.2"
lazy_static = "1.4.0"
hex = "0.4.0"
serde_json = "1.0"
ethereum-types = "0.9.2"
cosmrs = { version = "0.11.0", features = ["grpc", "cosmwasm", "default"] }
futures = "0.3.25"
tonic = "0.8.3"
prost = "0.11.5"
tokio = { version = "1.24.1", features = ["full"] }
