[package]
name = "cw-eth2-lc"
version = "0.1.0"
authors = ["Shravan Shetty <shravanshetty322@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []
e2e = []

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
electron-rs = { git = "https://github.com/Electron-Labs/electron-rs.git", branch = "feat/serde_support", features = ["serde"] }
sha2 = "0.10.7"
ethereum-types = { version = "0.14.1", features = ["rlp", "serialize"],  default-features = false }

# rainbow deps
types =  { path = "../types" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm" }
merkle_proof = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm" }
rlp = "0.5.2"

[dev-dependencies]
cw-multi-test = "0.16.2"
lazy_static = "1.4.0"
hex = "0.4.0"
serde_json = "1.0"
